// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChainFormService createChain$ should create chain 1`] = `
Object {
  "data": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 0,
        "lng": null,
        "lon": 0,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "createdAt": Any<String>,
    "description": Object {
      "de": null,
      "en": "Prisoner chain description",
      "hu": "Rab lánc leírás",
    },
    "email": "testuser+chainadmin@anyupp.com",
    "id": "test_ADMIN_CHAIN_IT_CHAIN_ID_01",
    "isActive": true,
    "name": "˜Rab lánc S",
    "phone": "1234567890",
    "style": Object {
      "colors": Object {
        "backgroundDark": "#d6dde0",
        "backgroundLight": "#ffffff",
        "borderDark": "#c3cacd",
        "borderLight": "#e7e5d0",
        "button": "#30bf60",
        "buttonText": "#fffffb",
        "disabled": "#303030",
        "highlight": "#30bf60",
        "icon": "#30bf60",
        "indicator": "#30bf60",
        "primary": "#30bf60",
        "secondary": "#303030",
        "textDark": "#303030",
        "textLight": "#ffffff",
      },
      "images": null,
    },
    "updatedAt": Any<String>,
  },
  "type": "insert",
}
`;

exports[`ChainFormService createChainFormGroup should create form group 1`] = `
Object {
  "address": Object {
    "address": "",
    "city": "",
    "country": "",
    "location": Object {
      "lat": 0,
      "lng": 0,
    },
    "postalCode": "",
    "title": "",
  },
  "description": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "email": "",
  "isActive": "",
  "name": "",
  "phone": "",
  "style": Object {
    "colors": Object {
      "button": "#30bf60",
      "buttonText": "#ffffff",
      "highlight": "#30bf60",
      "icon": "#30bf60",
    },
    "images": Object {
      "header": "",
      "logo": "",
    },
  },
}
`;

exports[`ChainFormService updateChain$ should update chain 1`] = `
Object {
  "data": Object {
    "address": Object {
      "address": "Ág u. 1.",
      "city": "Budapest",
      "country": "Magyarország",
      "location": Object {
        "lat": 0,
        "lng": null,
        "lon": 0,
      },
      "postalCode": "1021",
      "title": "HQ",
    },
    "createdAt": Any<String>,
    "description": Object {
      "de": null,
      "en": "Prisoner chain description",
      "hu": "Rab lánc leírás",
    },
    "email": "testuser+chainadmin@anyupp.com",
    "id": "test_ADMIN_CHAIN_IT_CHAIN_ID_01",
    "isActive": true,
    "name": "MODDED NAME",
    "phone": "12312321",
    "style": Object {
      "colors": Object {
        "backgroundDark": "#d6dde0",
        "backgroundLight": "#ffffff",
        "borderDark": "#c3cacd",
        "borderLight": "#e7e5d0",
        "button": "#30bf60",
        "buttonText": "#fffffb",
        "disabled": "#303030",
        "highlight": "#30bf60",
        "icon": "#30bf60",
        "indicator": "#30bf60",
        "primary": "#30bf60",
        "secondary": "#303030",
        "textDark": "#303030",
        "textLight": "#ffffff",
      },
      "images": null,
    },
    "updatedAt": Any<String>,
  },
  "type": "update",
}
`;

exports[`ChainFormService updateChainImageStyles$ should update chain image style 1`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 0,
      "lng": null,
      "lon": 0,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "createdAt": Any<String>,
  "description": Object {
    "de": null,
    "en": "Prisoner chain description",
    "hu": "Rab lánc leírás",
  },
  "email": "testuser+chainadmin@anyupp.com",
  "id": "test_ADMIN_CHAIN_IT_CHAIN_ID_01",
  "isActive": true,
  "name": "˜Rab lánc S",
  "phone": "1234567890",
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": Object {
      "header": "header_image",
      "logo": null,
    },
  },
  "updatedAt": Any<String>,
}
`;

exports[`ChainFormService updateChainImageStyles$ should update chain image style 2`] = `
Object {
  "address": Object {
    "address": "Ág u. 1.",
    "city": "Budapest",
    "country": "Magyarország",
    "location": Object {
      "lat": 0,
      "lng": null,
      "lon": 0,
    },
    "postalCode": "1021",
    "title": "HQ",
  },
  "createdAt": Any<String>,
  "description": Object {
    "de": null,
    "en": "Prisoner chain description",
    "hu": "Rab lánc leírás",
  },
  "email": "testuser+chainadmin@anyupp.com",
  "id": "test_ADMIN_CHAIN_IT_CHAIN_ID_01",
  "isActive": true,
  "name": "˜Rab lánc S",
  "phone": "1234567890",
  "style": Object {
    "colors": Object {
      "backgroundDark": "#d6dde0",
      "backgroundLight": "#ffffff",
      "borderDark": "#c3cacd",
      "borderLight": "#e7e5d0",
      "button": "#30bf60",
      "buttonText": "#fffffb",
      "disabled": "#303030",
      "highlight": "#30bf60",
      "icon": "#30bf60",
      "indicator": "#30bf60",
      "primary": "#30bf60",
      "secondary": "#303030",
      "textDark": "#303030",
      "textLight": "#ffffff",
    },
    "images": Object {
      "header": "header_image",
      "logo": "logo_image",
    },
  },
  "updatedAt": Any<String>,
}
`;
